# FATE

./: .gitignore  .gitmodules
cust-nn-doc/: cust-nn-doc.md
examples/data/: README.md
examples/dsl/v2/custom_nn/: custom_nn_conf.json  custom_nn_dsl.json  data.json
fate/fate-core/fate/core/: context.py
fate/fate-interface/fate/interface/: __init__.py  _anonymous.py  _cache.py  _checkpoint.py  _context.py  _data_io.py  _metric.py  _module.py  _param.py  _summary.py  context.py  model_io.py  module.py
fate/fate-ml/: pyproject.toml
fate/fate-ml/fate/ml/abc/: param.py
fate/fate-ml/fate/ml/context/: __init__.py
fate/fate-ml/fate/ml/context/tracker/: __init__.py  summary.py
fate/fate-ml/fate/ml/module/: model.py  module.py
fate/fate-ml/fate/ml/modules/: module.py  runner.py
fate/fate-ml/fate/ml/runner/: model.py  runner.py
python/fate/arch/: _standalone.py  relation_ship.py
python/fate/arch/abc/: __init__.py  _computing.py  _federation.py
python/fate/interface/: __init__.py  _context.py  _log.py  _party.py
python/fate_arch/data/: dataframe.py
python/fate_client/flow_client/: settings.yaml
python/federatedml/: model_base.py
python/federatedml/components/: components.py  custom_nn.py  ftl.py  homo_nn.py
python/federatedml/components.bak/: spdz_test_cpn.py
python/federatedml/custom_nn/: aggregator.py  client.py  fedavg_scheduler.py  param.py
python/federatedml/param/: base_param.py  homo_cust_nn_param.py
python/federatedml/secureprotol/: encrypt.py  random.py
python/federatedml/toy_example/: secure_add_guest.py  secure_add_host.py
(+152 files in other folders)
